--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -56,7 +56,8 @@ jobs:
         run: |
           DEPLOYMENT_TYPE=${{ needs.set-deployment-type.outputs.deployment-type }}
           echo $DEPLOYMENT_TYPE  # debug
-          cd terraform/environments/$(DEPLOYMENT_TYPE)/  || exit -1
+          cd terraform/environments/$(DEPLOYMENT_TYPE)/
+          pwd  # debug
       -
         name: Terraform Init
         run: terraform init
@@ -132,7 +133,7 @@ jobs:
             --repo https://kubernetes.github.io/ingress-nginx \
             --namespace ingress-nginx --create-namespace
           
-          cd helm || exit -1
+          cd helm
           if [[ $DEPLOYMENT_TYPE == 'dev' ]]; then
             echo "Deploying to dev"
             helm upgrade --install postgresql-user postgresql-ha \
