--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -47,6 +47,12 @@ jobs:
         name: Checkout repo
         uses: actions/checkout@v3
       -
+        name: Setup gcloud CLI
+        uses: google-github-actions/setup-gcloud@94337306dda8180d967a56932ceb4ddcf01edae7
+        with:
+          service_account_key: ${{ secrets.GCP_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+      -
         name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
