--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -60,7 +60,8 @@ jobs:
       -
         name: Terraform init and apply
         run: |
-          export GOOGLE_CREDENTIALS=${{ secrets.GCP_KEY }}
+          echo ${{ secrets.GCP_KEY }} > /tmp/gke_credentials.json
+          export GOOGLE_APPLICATION_CREDENTIALS=/tmp/gke_credentials.json
           DEPLOYMENT_TYPE=${{ needs.set-deployment-type.outputs.deployment-type }}
           echo $DEPLOYMENT_TYPE  # debug
           cd terraform/environments/$DEPLOYMENT_TYPE/ || exit -1
