gateway working - auth tbd

--- a/cad-GatewayService/src/main/resources/application.properties
+++ b/cad-GatewayService/src/main/resources/application.properties
@@ -1,17 +1,25 @@
-server.port=7085
-spring.application.name=api-gateway
+spring.application.name=Gateway-Service
+server.port=8080
+server.forward-headers-strategy=framework
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
-## Product Service Route
-spring.cloud.gateway.routes[0].id=product-service
-spring.cloud.gateway.routes[0].uri=lb://product-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/api/product
-## Discover Server Static Resources Route
-spring.cloud.gateway.routes[3].id=discovery-server-static
-spring.cloud.gateway.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
-## Order Service Route
-spring.cloud.gateway.routes[1].id=order-service
-spring.cloud.gateway.routes[1].uri=lb://order-service
-spring.cloud.gateway.routes[1].predicates[0]=Path=/api/order
+# Swagger Config
+springdoc.swagger-ui.path=/api-docs/swagger-ui.html
+springdoc.swagger-ui.disable-swagger-default-url=true
+## Gym Service Route
+spring.cloud.gateway.routes[0].id=gym-service
+spring.cloud.gateway.routes[0].uri=http://localhost:7081/
+spring.cloud.gateway.routes[0].predicates[0]=Path=/gym/*
+## User Service Route
+spring.cloud.gateway.routes[1].id=user-service
+spring.cloud.gateway.routes[1].uri=http://localhost:7082/
+spring.cloud.gateway.routes[1].predicates[0]=Path=/user/*
+## Workout Service Route
+spring.cloud.gateway.routes[2].id=workout-service
+spring.cloud.gateway.routes[2].uri=http://localhost:7083/
+spring.cloud.gateway.routes[2].predicates[0]=Path=/workout/*
+## Reporting Service Route
+spring.cloud.gateway.routes[3].id=reporting-service
+spring.cloud.gateway.routes[3].uri=http://localhost:7084/
+spring.cloud.gateway.routes[3].predicates[0]=Path=/reporting/*
