--- a/cad-ReportingService/src/main/resources/application.properties
+++ b/cad-ReportingService/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/reporting
 spring.cloud.gcp.project-id=cad-gym-app
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=
-spring.mail.password=
+#spring.mail.username=
+#spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
