--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -126,7 +126,7 @@ jobs:
         run: |
           DEPLOYMENT_TYPE=${{ needs.set-deployment-type.outputs.deployment-type }}
           export USE_GKE_GCLOUD_AUTH_PLUGIN=True
-          gcloud container clusters get-credentials cluster-$DEPLOYMENT_TYPE
+          gcloud container clusters get-credentials cluster-$DEPLOYMENT_TYPE --zone europe-west3-c
       -
         name: Deploy application
         run: |
