--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -124,6 +124,7 @@ jobs:
       -
         name: Configure kubectl
         run: |
+          gcloud components install gke-gcloud-auth-plugin --quiet
           DEPLOYMENT_TYPE=${{ needs.set-deployment-type.outputs.deployment-type }}
           export USE_GKE_GCLOUD_AUTH_PLUGIN=True
           gcloud container clusters get-credentials cluster-$DEPLOYMENT_TYPE --zone europe-west3-c
