Fix wrong url in prod-free

--- a/helm/gymapp-prod-free-deployment.yaml
+++ b/helm/gymapp-prod-free-deployment.yaml
@@ -1,5 +1,5 @@
 ingress:
-  host: "premium.gymapp-htwg.com"
+  host: "gymapp-htwg.com"
 
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-frontend:latest
