- Register and use reserved global ip - Adjust services and ingress to use gke-ingress

--- a/helm/cad-gymapp/templates/gym-service-service.yaml
+++ b/helm/cad-gymapp/templates/gym-service-service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
   name: gym-service-service
 spec:
+  type: NodePort
   selector:
     app: gym-service
   ports:
     - protocol: TCP
       port: {{ .Values.gymService.port }}
-      targetPort: 7081
+      targetPort: {{ .Values.gymService.port }}
