--- a/helm/cad-gymapp/templates/ingress.yaml
+++ b/helm/cad-gymapp/templates/ingress.yaml
@@ -2,45 +2,40 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
+  annotations:
+    kubernetes.io/ingress.global-static-ip-name: {{ .Values.ingress.globalIpName }}
 
 spec:
-  ingressClassName: nginx
+  #ingressClassName: nginx
   rules:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          #          - path: /auth
-          #            pathType: Prefix
-          #            backend:
-          #              service:
-          #                name: auth
-          #                port:
-          #                  number: 7080
           - path: /gym
             pathType: Prefix
             backend:
               service:
                 name: gym-service-service
                 port:
-                  number: 7081
+                  number: {{ .Values.gymService.port }}
           - path: /user
             pathType: Prefix
             backend:
               service:
                 name: user-service-service
                 port:
-                  number: 7082
+                  number: {{ .Values.userService.port }}
           - path: /workout
             pathType: Prefix
             backend:
               service:
                 name: workout-service-service
                 port:
-                  number: 7083
+                  number: {{ .Values.workoutService.port }}
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: frontend-service
                 port:
-                  number: 80
+                  number: {{ .Values.frontend.port }}
