--- a/helm/cad-gymapp/values.yaml
+++ b/helm/cad-gymapp/values.yaml
@@ -89,6 +89,7 @@ workoutServiceUrl: "http://workout-service-service:7083/workout"
 
 ingress:
   host: ""
+  globalIpName: "ingress-ip-dev"
 
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-dev/cad-gym-frontend:latest
@@ -113,7 +114,7 @@ userService:
 
 workoutService:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-dev/cad-gym-workout-service:latest
-  port: 7082
+  port: 7083
   sqlDbUrl: "postgresql-workout-postgresql-ha-pgpool:5432"
   springDatasourceUrl: "jdbc:postgresql://postgresql-workout-postgresql-ha-pgpool:5432/cad"
   springDatasourceUsername: postgres
