--- a/helm/cad-gymapp/templates/frontend-service.yaml
+++ b/helm/cad-gymapp/templates/frontend-service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
   name: frontend-service
 spec:
+  type: NodePort
   selector:
     app: frontend
   ports:
     - protocol: TCP
       port: {{ .Values.frontend.port }}
-      targetPort: 80
+      targetPort: {{ .Values.frontend.port }}
