--- a/helm/cad-gymapp/templates/user-service-service.yaml
+++ b/helm/cad-gymapp/templates/user-service-service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
   name: user-service-service
 spec:
+  type: NodePort
   selector:
     app: user-service
   ports:
     - protocol: TCP
       port: {{ .Values.userService.port }}
-      targetPort: 7082
+      targetPort: {{ .Values.userService.port }}
