--- a/helm/cad-gymapp/templates/workout-service-service.yaml
+++ b/helm/cad-gymapp/templates/workout-service-service.yaml
@@ -3,9 +3,10 @@ kind: Service
 metadata:
   name: workout-service-service
 spec:
+  type: NodePort
   selector:
     app: workout-service
   ports:
     - protocol: TCP
       port: {{ .Values.workoutService.port }}
-      targetPort: 7083
+      targetPort: {{ .Values.workoutService.port }}
