- Fix gke-ingress - Fix user service url

--- a/helm/cad-gymapp/templates/gym-service-deployment.yaml
+++ b/helm/cad-gymapp/templates/gym-service-deployment.yaml
@@ -20,3 +20,17 @@ spec:
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           ports:
             - containerPort: 7081
+          livenessProbe:
+            httpGet:
+              path: /gym/healthcheck
+              port: 7081
+            initialDelaySeconds: 10
+            timeoutSeconds: 5
+          readinessProbe:
+            httpGet:
+              path: /gym/healthcheck
+              port: 7081
+            initialDelaySeconds: 10
+            timeoutSeconds: 5
+
+
