--- a/helm/cad-gymapp/templates/ingress.yaml
+++ b/helm/cad-gymapp/templates/ingress.yaml
@@ -11,31 +11,32 @@ spec:
     - host: {{ .Values.ingress.host }}
       http:
         paths:
-          - path: /gym
-            pathType: Prefix
-            backend:
-              service:
-                name: gym-service-service
-                port:
-                  number: {{ .Values.gymService.port }}
-          - path: /user
-            pathType: Prefix
-            backend:
-              service:
-                name: user-service-service
-                port:
-                  number: {{ .Values.userService.port }}
-          - path: /workout
-            pathType: Prefix
-            backend:
-              service:
-                name: workout-service-service
-                port:
-                  number: {{ .Values.workoutService.port }}
-          - path: /
-            pathType: Prefix
+          - path: /*
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: frontend-service
                 port:
                   number: {{ .Values.frontend.port }}
+          - path: /gym/*
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: gym-service-service
+                port:
+                  number: {{ .Values.gymService.port }}
+          - path: /user/*
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: user-service-service
+                port:
+                  number: {{ .Values.userService.port }}
+          - path: /workout/*
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: workout-service-service
+                port:
+                  number: {{ .Values.workoutService.port }}
+
