--- a/helm/cad-gymapp/templates/ingress.yaml
+++ b/helm/cad-gymapp/templates/ingress.yaml
@@ -4,11 +4,14 @@ metadata:
   name: ingress
   annotations:
     kubernetes.io/ingress.global-static-ip-name: {{ .Values.ingress.globalIpName }}
+    networking.gke.io/managed-certificates: "{{ .Values.managedSslCert.name }}-{{ .Release.Namespace }}"
+    kubernetes.io/ingress.class: "gce"
+
 
 spec:
   #ingressClassName: nginx
   rules:
-    - host: {{ .Values.ingress.host }}
+    - host: {{ .Values.domain }}
       http:
         paths:
           - path: /*
