Adjust deployment value files to use an ssl certificate and the correct domain

--- a/helm/gymapp-prod-free-deployment.yaml
+++ b/helm/gymapp-prod-free-deployment.yaml
@@ -1,5 +1,7 @@
-ingress:
-  host: "gymapp-htwg.com"
+domain: "drescherflo.de"
+
+managedSslCert:
+  name: "managed-cert-prod"
 
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-frontend:latest
