--- a/helm/gymapp-staging-enterprise-deployment.yaml
+++ b/helm/gymapp-staging-enterprise-deployment.yaml
@@ -1,3 +1,6 @@
+managedSslCert:
+  name: "managed-cert-staging"
+
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-frontend:latest
 
