--- a/helm/gymapp-staging-free-deployment.yaml
+++ b/helm/gymapp-staging-free-deployment.yaml
@@ -1,5 +1,7 @@
-ingress:
-  host: "gymapp-htwg-staging.com"
+domain: "staging.drescherflo.de"
+
+managedSslCert:
+  name: "managed-cert-staging"
 
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-frontend:latest
