--- a/helm/gymapp-prod-premium-deployment.yaml
+++ b/helm/gymapp-prod-premium-deployment.yaml
@@ -1,5 +1,7 @@
-ingress:
-  host: "premium.gymapp-htwg.com"
+domain: "premium.drescherflo.de"
+
+managedSslCert:
+  name: "managed-cert-prod"
 
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-frontend:latest
