--- a/helm/gymapp-staging-premium-deployment.yaml
+++ b/helm/gymapp-staging-premium-deployment.yaml
@@ -1,6 +1,7 @@
-ingress:
-  host: "premium.gymapp-htwg-staging.com"
+domain: "premium.staging.drescherflo.de"
 
+managedSslCert:
+  name: "managed-cert-staging"
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-frontend:latest
 
