Build frontend with prod environment

--- a/cad-Frontend/Dockerfile
+++ b/cad-Frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:alpine AS cad-Frontend
 WORKDIR /src/app
 COPY . .
-RUN npm install && npm run build
+RUN npm install && npm run build -c prod
 
 FROM nginx:alpine
 COPY --from=cad-Frontend src/app/dist/cad-frontend/ /usr/share/nginx/html
