Fix wrong global ip name for staging and prod

--- a/helm/gymapp-staging-enterprise-deployment.yaml
+++ b/helm/gymapp-staging-enterprise-deployment.yaml
@@ -1,6 +1,9 @@
 managedSslCert:
   name: "managed-cert-staging"
 
+ingress:
+  globalIpName: "ingress-ip-staging"
+
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-staging/cad-gym-frontend:latest
 
