--- a/helm/gymapp-prod-enterprise-deployment.yaml
+++ b/helm/gymapp-prod-enterprise-deployment.yaml
@@ -1,6 +1,9 @@
 managedSslCert:
   name: "managed-cert-prod"
 
+ingress:
+  globalIpName: "ingress-ip-prod"
+
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-frontend:latest
 
