--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -132,7 +132,7 @@ jobs:
         name: Deploy application
         run: |
           DEPLOYMENT_TYPE=${{ needs.set-deployment-type.outputs.deployment-type }}
-          INGRESS_IP=$(gcloud compute addresses describe ingress-ip-$DEPLOYMENT_TYPE --format='get(address)')
+          INGRESS_IP=$(gcloud compute addresses describe ingress-ip-$DEPLOYMENT_TYPE --region='europe-west3' --format='get(address)')
           echo "Ingress IP: $INGRESS_IP"
           helm upgrade --install ingress-nginx ingress-nginx \
             --repo https://kubernetes.github.io/ingress-nginx \
