--- a/helm/cad-gymapp/templates/ingress.yaml
+++ b/helm/cad-gymapp/templates/ingress.yaml
@@ -2,9 +2,16 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    cert-manager.io/issuer: "letsencrypt-{{ .Values.letsencrypt.issuer }}-issuer"
 
 spec:
-  ingressClassName: nginx
+  tls:
+    - hosts:
+      - {{ .Values.domain }}
+      secretName: ssl-cert-{{ .Release.Namespace }}
+  #ingressClassName: nginx
   rules:
     - host: {{ .Values.domain }}
       http:
