--- a/helm/cad-gymapp/values.yaml
+++ b/helm/cad-gymapp/values.yaml
@@ -82,6 +82,9 @@
 #affinity: {}
 
 domain: "dev.drescherflo.de"
+letsencrypt:
+  mail: ""
+  issuer: "staging"
 
 replicas: 2
 imagePullPolicy: Always
