--- a/cad-GatewayService/src/main/resources/application.properties
+++ b/cad-GatewayService/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.forward-headers-strategy=framework
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionRouteLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
+server.servlet.context-path=/api
 # Swagger Config
 springdoc.swagger-ui.path=/api-docs/swagger-ui.html
 springdoc.swagger-ui.disable-swagger-default-url=true
