--- a/helm/gymapp-prod-enterprise-deployment.yaml
+++ b/helm/gymapp-prod-enterprise-deployment.yaml
@@ -1,3 +1,6 @@
+letsencrypt:
+  issuer: "prod"
+
 frontend:
   image: europe-west3-docker.pkg.dev/cad-gym-app/cad-repo-prod/cad-gym-frontend:latest
 
